--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 AZURE_OPENAI_API_VERSION = "2024-10-01-preview"
+ASSISTANT_ID = "asst_aqd20ehxXS7BblLSBZNtJIVU"
 PROJECT_CONNECTION_STRING = "eastus.api.azureml.ms;fe513b38-2149-43f6-b22e-8a87259633e0;rg-patentforecast-playground;proj-patentforecast-playground"
