--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ sentence-transformers~=4.1.0
 scikit-learn~=1.6.1
 joblib~=1.5.0
 torch~=2.7.0
+azure-identity~=1.23.0
+azure-search-documents~=11.5.2
